# BotWorld

./: .gitignore  Dockerfile  Makefile  README.md  a.py  biom.py  cell_auto.py  docker-compose.yml  enums.py  game.py  main.py  pyproject.toml  requirements.txt  settings.py  sprites.py  utils.py
botworld/: .env.example  docker-compose.yml  example.env  sandbox.ipynb
botworld/api/src/: app.py  config.py
botworld/api/src/migrations/versions/: aca0d71c7f7e_llm_token_bot_id.py
botworld/api/src/models/: bot_model.py  move_model.py
botworld/botworld_api/: Dockerfile  pyproject.toml
botworld/botworld_api/src/: app.py  config.py  sandbox.py
botworld/botworld_api/src/api/: bot_api.py  move_api.py
botworld/botworld_api/src/db/: __init__.py  tables.py
botworld/botworld_api/src/errors/: errors.py
botworld/botworld_api/src/migrations/versions/: 305c81f566f5_init_table.py  769301aa013f_llm_link_not_uniq.py
botworld/botworld_api/src/models/: tables.py
botworld/botworld_api/src/schemas/: bot_schema.py  move_schema.py
botworld/botworld_api/src/services/: bot_service.py  move_service.py
botworld/game/: cell_auto.py  enums.py  main.py  settings.py  sprites.py  utils.py
botworld/olama_service/: design_doc.txt  docker-compose.yml  game_status.txt  main.py  sandbox.py
